# seqsafe

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.ja.md  README.md  README.zh.md
docs/: classes.md
examples/: README.md
scripts/: smoke.sh
src/: classify.rs  cli.rs  lib.rs  main.rs  parser.rs  policy.rs  report.rs  sanitize.rs
tests/: cli.rs
